# Proxi

./: .cursorignore  .gitignore  BROWSER_INTEGRATION.md  BROWSER_INTEGRATION_QUICKSTART.md  BROWSER_TEST_CASES.md  CONTRIBUTING.md  CodeOfConduct.md  INSTALL.md  README.md  cli_task.md  debug_vision.py  examples_browser_usage.py  package.json  pyproject.toml  run_server.py  sample.txt  start-frontend.bat  start-frontend.py  test_backend.py  test_browser_integration.py  test_integration_quick.py  test_mcp.py  test_vision_booking.py
.github/workflows/: ci.yml
cli_ink/: STEPS.md  package-lock.json  package.json  tsconfig.json
cli_ink/src/: App.tsx  index.tsx  protocol.ts  theme.ts  types.ts
config/: integrations.json  mcp.json  mcporter.json
discord_relay/: README.md  package-lock.json  package.json
discord_relay/src/: index.js
docs/: Common.tex  browser_adaptive_intelligence.md  browser_subagent.md  proactive_obstacle_handling.md
docs/DevelopmentPlan/: DevelopmentPlan.tex
docs/HazardAnalysis/: HazardAnalysis.tex
docs/ProblemStatementAndGoals/: ProblemStatement.tex
docs/ReflectAndTrace/: Makefile  ReflectAndTrace.tex
docs/SRS-Volere/: SRS.tex
docs/UserGuide/: UserGuide.tex
docs/VnVPlan/: VnVPlan.tex
docs/VnVReport/: VnVReport.bib  VnVReport.tex
docs/projMngmnt/: Final_Team_Contrib.tex  Makefile
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
instruction_manual/: memory.md
mcp-gmail-openai/: .env.example  README.md  cli.py  requirements.txt  server.py
mcp-integrations/: .env.example  README.md  cli.py  gmail_server.py  notion_server.py  requirements.txt
proxi/: __init__.py  audio_transcription.py  bridge.py  discord_relay_launcher.py  main.py  react_launcher.py  tui_launcher.py
proxi/agents/: __init__.py  base.py  browser.py  (+2 more)
proxi_mcps_weather_calendar_full_chat_patched_v5/: README.md  chat_cli.py  requirements.txt
react_frontend/: package-lock.json  package.json  server.js
refs/: References.bib  compaction.md  memory.md
scripts/: init_api_keys_db.py  setup_launcher.py  start_discord_relay.mjs  start_proxi.mjs
src/: logger.py
tests/: conftest.py  test_bridge.py  test_browser_agent.py  test_browser_smart.py  test_browser_subagent.py  test_cli_integration_tools.py  test_coding_tools.py  test_compactor.py  test_gateway.py  test_mcp_catalog.py  test_memory_manager.py  test_obsidian_tools.py  test_proxi.py  test_registry.py  test_state.py  test_tool_search.py  test_web_research_tools.py  test_workspace.py
(+188 files in other folders)
