[project]
name = "proxi"
version = "0.1.0"
description = "A general-purpose agent loop with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "aiofiles>=24.0.0",
    "structlog>=24.0.0",
]

[project.scripts]
proxi = "proxi.cli.main:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]
gmail = [
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
    "python-dotenv>=1.0.0",
]
notion = [
    "notion-client>=2.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
